--- a/journal/202003.md
+++ b/journal/202003.md
@@ -10,7 +10,7 @@ Highlights for March:
 
 - Yearly budgets for US/English and Brazilian outreach approved, {}K in total.
 - First atomic swap trade on testnet coordinated by the DEX.
-- This is 24th issue which means that DJ has just turned 2 years!
+- This is the 24th issue which means that DJ has just turned 2 years!
 
 ## Development
 
@@ -137,7 +137,7 @@ Hashrate: March's hashrate opened at ~359 Ph/s and closed ~332 Ph/s, bottoming a
 
 Staking: 30-day average ticket price was 141.85 DCR (+9.75) per dcrstats.com. The price varied between 130.9-166.82 DCR. Locked amount was 5.51-5.74 million DCR, which corresponded to 49.24-51.14% of the available supply.
 
-The ticket price again hit a new maximum (After stake algorithm chage) 166.82 DCR. 
+The ticket price again hit a new maximum (After stake algorithm change) 166.82 DCR. 
 
 Block size: This month, the blockchain size grew 123 MB. Blocks had an average size of 14.1 KB. The smallest block had a size of 1.6 KB and the largest one, 366 KB.
 
@@ -159,7 +159,7 @@ Probit [added](https://twitter.com/ProBit_Exchange/status/1235450770100649986) s
 Exmo.com had a sudden DCR [outage](https://twitter.com/Exmo_Com/status/1240255377507303431) that coincided with the fork, the services [resumed](https://twitter.com/Exmo_Com/status/1240627750005870592) the next day. The addition of DCR to the exmo platform was [paid](https://proposals.decred.org/proposals/950e8149e594b01c010c1199233ab11e82c9da39174ba375d286dc72bb0a54d7) for by stakeholders.
 
 
-User AGspearo was not able to access their [funds](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/) due to the VSP d1pool shutting down without notice and them not having access to their redeem script. AGspearo spent a lot of time on support trying to resolve this issue but ultimately they were unable to get their funds. @davecgh broke down the issue as a [comment](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/fkiac45) and also said a possible consensus change might solve these [issues](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/fkku35k).  If you are reading this and do not have your redeem script backed up please take this an warning and do a [backup](https://docs.decred.org/wallets/decrediton/using-decrediton/#backup-redeem-script) and store it along with your seed.
+User AGspearo was not able to access their [funds](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/) due to the VSP d1pool shutting down without notice and them not having access to their redeem script. AGspearo spent a lot of time on support trying to resolve this issue but ultimately they were unable to get their funds. @davecgh broke down the issue as a [comment](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/fkiac45) and also said a possible consensus change might solve these [issues](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/fkku35k).  If you are reading this and do not have your redeem script backed up please take this a warning and do a [backup](https://docs.decred.org/wallets/decrediton/using-decrediton/#backup-redeem-script) and store it along with your seed.
 
 Some VSP's that had broken signup pages/out of date/returning errors had been [put on notice](https://github.com/decred/dcrwebapi/pulls?q=is%3Apr+created%3A%3E2020-02-29+author%3Ajholdstock) that they will be removed. Some of them have responded and fixed the issues. raqamiya.net,tokensmart.io and dcrpos.idcray.com have been removed since they failed to respond.
 
@@ -204,16 +204,16 @@ Attended:
 - Mar 4 - [Crypto and Blockchain](https://www.meetup.com/BC-Aus/events/268793182/) - Melbourne, Australia. The event directed entry fees to Crypto Fire Alliance to help with the bushfire emergency (overall the fundraiser [received](https://www.finder.com.au/crypto-bushfire-fundraiser) $27K in crypto). @eSizeDave participated on the panel discussion, [noting](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158381267934685XUpiS:decred.org): "the audience had more questions for me and than anyone else, and got a lot of follow-up meetings as a result of it". ([video](https://twitter.com/DecredAustralia/status/1235390840307978245))
 - Mar 5 - [Decred Meetup](https://www.eventbrite.com/e/decred-meetup-en-valencia-venezuela-tickets-97804334397) - Valencia, Venezuela. Co-hosted by ClicTechNova y CoWorking Lab. The meetup was an introduction to Decred ecosystem, hybrid blockchain, governance mechanism, privacy, and elements that make Decred a DAO. There were ~50 attendees that asked interesting questions about social attacks on the network, how to contribute and the incentive model of DCR. ([photos](https://twitter.com/Decred_ES/status/1236079742643773440), [video](https://twitter.com/Decred_ES/status/1236080559752916998))
 - Mar 6 - [Impact Hub](https://www.eventbrite.com/e/decred-meetup-impact-hub-caracas-venezuela-tickets-97159680219) - Caracas, Venezuela. Co-hosted by El Dorado y Cointigo. The meetup was an introduction to Decred ecosystem, its governance structure and what makes it a different cryptocurrency from the rest. Around 30 people attended, several entrepreneurs and developers but also several new users of cryptocurrencies looking for more information about the technology and investment opportunities. ([photos](https://twitter.com/Decred_ES/status/1236337867095343104), [video](https://twitter.com/Decred_ES/status/1236340242698752001))
-- Mar 8 - [International Women's Day](https://www.meetup.com/GDGCasablanca/events/268661463/) - Casablanca, Morocco. The event was held at ENSAM, a University of Science. Most of the 70 attendees were data science students and developers. @arij gave a 1-hour talk about blockchains and Decred and a workshop afterwards: "What I've learned from my experiences talking and explaining blockchain technology and Decred, is that people are more interested when you show them how things really work with demo and videos, especially when it is their first time learning about it". ([notes](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158374584733992NOIMZ:decred.org), [photos](https://www.flickr.com/photos/187387360@N04/albums/72157713440754483))
-- Mar 12 - Women in Blockchain - Mexico City, Mexico. Co-hosted by the Bitcoin Embassy, the meetup was to talk about women's envolment in the cryptocurrency industry and how to empower women to use crypto. @francov\_ did a presentation on how to contribute to Decred project and her experience working in the industry. There were ~30 at the meetup and after presentation there was a netwoking session (photos: [1](https://twitter.com/victorarubin/status/1238288234368708608), [2](https://twitter.com/LOReBitcoin/status/1238511419886313475), [3](https://twitter.com/victorarubin/status/1238296200622813184))
+- Mar 8 - [International Women's Day](https://www.meetup.com/GDGCasablanca/events/268661463/) - Casablanca, Morocco. The event was held at ENSAM, a University of Science. Most of the 70 attendees were data science students and developers. @arij gave a 1-hour talk about blockchains and Decred and a workshop afterward: "What I've learned from my experiences talking and explaining blockchain technology and Decred, is that people are more interested when you show them how things really work with demo and videos, especially when it is their first time learning about it". ([notes](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158374584733992NOIMZ:decred.org), [photos](https://www.flickr.com/photos/187387360@N04/albums/72157713440754483))
+- Mar 12 - Women in Blockchain - Mexico City, Mexico. Co-hosted by the Bitcoin Embassy, the meetup was to talk about women's envolment {?? empowerment ? enrolment ? involvement ?}  in the cryptocurrency industry and how to empower women to use crypto. @francov\_ did a presentation on how to contribute to Decred project and her experience working in the industry. There were ~30 at the meetup and after presentation there was a networking session (photos: [1](https://twitter.com/victorarubin/status/1238288234368708608), [2](https://twitter.com/LOReBitcoin/status/1238511419886313475), [3](https://twitter.com/victorarubin/status/1238296200622813184))
 - Mar 12 - [Decred Meetup](https://www.meetup.com/es-ES/BitcoinBlockchainUruguay/events/269160706/) - Montevideo, Uruguay. Around 25 people attended the meetup. @tomee presented an introduction to Decred and its security, adaptability and sustainability, Politeia, governance and how to contribute. The meetup was also a networking session and some of the people knew the project from Labitconf. (photos: [1](https://twitter.com/ivarese/status/1238628854379536389), [2](https://twitter.com/cryptorc_tech/status/1241081659669315585))
 - Mar 12 - [Blockchain Summit Latam](https://twitter.com/Decred_ES/status/1237552322596593665) - Panama City, Panama. The event was rescheduled to Oct 15-16, but it occurred 24 hours before the event when some speakers were already in the area (~35 people). The event staff took the opportunity and hosted a small meetup where presenters got the chance to network and to know about the projects from close up. @adcade and @elian talked with a few representatives and secured an [interview](https://es.cointelegraph.com/news/decred-how-does-your-development-continue-during-the-bear-market) for Spanish Cointelegraph. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200312-blockchain-summit-latam-meetup-panama-city-panama.md))
 - Mar 12 - [Hablemos Decred 01](https://twitter.com/Decred_ES/status/1238242352306614273) - Internet. "Let's Talk Decred", the first Spanish online meeting used Decred's Discord server. Most questions were about Decred's PoS voting system. Those who had some prior knowledge of crypto asked how to stake, and those who didn't wanted to know more about voting rights and what can stakeholders do with their tickets. About third of ~15 people were new to the project. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200312-hablemosdecred-01-internet.md))
 - Mar 18 - [Exchanges in LATAM](https://twitter.com/Decred_ES/status/1240428280756310018) - Internet. @elian talked about centralized and decentralized exchanges in a virtual meetup with people from [@AvaLatam](https://twitter.com/AvaLatam), [@blockchain_land](https://twitter.com/blockchain_land) and virica.io Mexico. Around 16 people attended and what we've learned is that online talks should be 30 min or less.
 - Mar 24 - [Decred Webinar](https://www.meetup.com/es-ES/blockacademycl/events/269108758/) - Internet. @tomee and @camilolwi were talking all things Decred and the challenges of decentralized blockchain governance in a webinar co-organized with Blockchain Academy Chile. ([video](https://www.youtube.com/watch?v=U07ZL_qFAQM))
-- Mar 27 - [Hablemos Decred 02](https://twitter.com/Decred_ES/status/1243214184793485314) - Internet. Second Spanish online meetup explored Jitsi to connect 13 participants from Argetina, Mexico, Bolivia, Chile and with 7 new users. This time the call started with an intro talk about Decred, a demo of Decrediton, and an open mic for questions and comments. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200327-hablemosdecred-02-internet.md))
+- Mar 27 - [Hablemos Decred 02](https://twitter.com/Decred_ES/status/1243214184793485314) - Internet. Second Spanish online meetup explored Jitsi to connect 13 participants from Argentina, Mexico, Bolivia, Chile and with 7 new users. This time the call started with an intro talk about Decred, a demo of Decrediton, and an open mic for questions and comments. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200327-hablemosdecred-02-internet.md))
 - Mar 28 - [DevOpsDays](https://devopsdays.org/events/2020-natal/welcome/) - Natal, Brazil. { @guisso did it happen? }
-- Mar 29 - [Binance AMA](https://twitter.com/Decred_ES/status/1244360357843533825) - Internet. The event was hosted in Binance Spanish Telegram groupw with 8,000+ members and received a high level of engagement. @adcade, @elian and @pablito received 155 questions from 73 participants and gifted 0.333 DCR to the best questions. A good amount of knowledge was gathered that can signal where prospect Decred users lack information. This was the second Decred AMA with Binance Spanish community and the longest AMA they had so far (~2.5 hours). ([report](https://github.com/decredcommunity/events/blob/master/reports/20200329-decred-ama-binance-spanish-community-internet.md))
+- Mar 29 - [Binance AMA](https://twitter.com/Decred_ES/status/1244360357843533825) - Internet. The event was hosted in Binance Spanish Telegram group with 8,000+ members and received a high level of engagement. @adcade, @elian and @pablito received 155 questions from 73 participants and gifted 0.333 DCR to the best questions. A good amount of knowledge was gathered that can signal where prospect Decred users lack information. This was the second Decred AMA with Binance Spanish community and the longest AMA they had so far (~2.5 hours). ([report](https://github.com/decredcommunity/events/blob/master/reports/20200329-decred-ama-binance-spanish-community-internet.md))
 - Mar 30 - [Decred Virtual Meetup](https://www.meetup.com/Decred-Australia/events/269640276/) - Internet. { @zohand did it happen? }
 
 Upcoming: { double check with event leads before release }
@@ -336,7 +336,7 @@ Since Mar 18 Tether has issued over $400M USDT in batches of $60M and surpassed 
 
 {other: regulations, privacy, security, fun}
 
-U.S. government approved an exceptionally large [$2 trillion](https://www.zerohedge.com/economics/anatomy-2-trillion-covid-19-stimulus-bill) "stimulus" plan attributed to COVID-19. Discussion of the source of funds is still rare in the media. One polititian [argued](https://twitter.com/RepThomasMassie/status/1243565651391897603) that the bill creates even more secrecy around the Fed that is already not auditable.
+U.S. government approved an exceptionally large [$2 trillion](https://www.zerohedge.com/economics/anatomy-2-trillion-covid-19-stimulus-bill) "stimulus" plan attributed to COVID-19. Discussion of the source of funds is still rare in the media. One politician [argued](https://twitter.com/RepThomasMassie/status/1243565651391897603) that the bill creates even more secrecy around the Fed that is already not auditable.
 
 U.S. Fed made multiple unprecedented moves attributed to COVID-19, succinctly  [summarized](https://www.bloomberg.com/news/articles/2020-03-25/fed-unbound-all-the-u-s-central-bank-s-corona-related-moves) by Bloomberg. For those still following the ["repo" numbers](https://www.zerohedge.com/markets/ny-fed-conduct-1-trillion-repo-over-two-days-stabilize-treasury-financing-market), the amount of overnight loans (started as a "temporary" measure in Sep 2019) has reached $1T, while the amount of longer-term loans is projected to reach $4T. Most of that means creating money out of thin air without any labor, and then loaning out that money to people and businesses who will need to work to pay it back. Among the measures are swap lines built to "pump USD out across the world to ease access to the world's most important currency".
 
