--- a/journal/202003.md
+++ b/journal/202003.md
@@ -24,10 +24,24 @@ https://bounty.decred.org/2020/03/status-update/ { to clarify, this was a bug in
 
 [Decrediton](https://github.com/decred/decrediton): {}
 
-[Politeia](https://github.com/decred/politeia): {}
+[Politeia](https://github.com/decred/politeia):
+
+- [invalidate](https://github.com/decred/politeia/pull/1159) sessions on password change
+- test improvements and bug fixes
+
+CMS:
+
+- ability to assign proposal [ownership](https://github.com/decred/politeia/pull/1135)
+- [deactivate](https://github.com/decred/politeia/pull/1154) temporary contractor account on paid invoice and require admin approval to allow another invoice
+- [preload](https://github.com/decred/politeiagui/pull/1829) user info to assist in authoring invoices
+- redesign work started in October finally [merged](https://github.com/decred/politeiagui/pull/1828). This large change adds 9K and deletes 24K lines of code.
+  - { any comments? what is pi-ui and why? also, why redesign is neccessary for an internal system? dark mode? }
+
+Up next:
 
 - tlog implementation is [projected](https://github.com/decred/politeia/issues/1112#issuecomment-606147106) to start in April and take ~2 months. This will make the foundation to make Politeia more scalable and will also fix the annoying bug of duplicate comments.
-  - { how to interpret "starting the tlog implementation" if we've reported a bunch of tlog work alredy? }
+  - { how to interpret "starting the tlog implementation" if we've reported a bunch of tlog work already? }
+  - { is there a spec describing how tlog backend will work? }
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): {}
 
