--- a/journal/202003.md
+++ b/journal/202003.md
@@ -24,6 +24,53 @@ https://bounty.decred.org/2020/03/status-update/ { to clarify, this was a bug in
 
 [Decrediton](https://github.com/decred/decrediton): {}
 
+- Refactor to start decrediton using a [state machine](https://github.com/decred/decrediton/pull/2425). This will be useful to code maintenance, readability, treating errors and add new ways to start decrediton.
+
+- Single proposal view made [responsive](https://github.com/decred/decrediton/pull/2444). 
+
+- Better info on state of [agendas](https://github.com/decred/decrediton/pull/2442).
+
+- More visible [ticket revoke button](https://github.com/decred/decrediton/pull/2434).
+
+- Dark theme styling to [‘no more tickets’](https://github.com/decred/decrediton/pull/2427) bar. 
+
+- Ability to watch only [wallets import scripts](https://github.com/decred/decrediton/pull/2423).
+
+- [Added](https://github.com/decred/decrediton/pull/2416) tx's addresses to overview and transactions view 
+
+- Slack [removed](https://github.com/decred/decrediton/pull/2415) from help tab.
+
+- [Fixed](https://github.com/decred/decrediton/pull/2409) loading bar animations. 
+
+
+In development:
+
+- Adding [CoinShuffle++](https://github.com/decred/decrediton/pull/2452) to Decrediton. 
+
+- improvements to [ticket view](https://github.com/decred/decrediton/issues/2262).
+
+- Support for [cold staking](https://github.com/decred/decrediton/pull/2424).
+
+ 
+Merged:
+ 
+Responsive close button on settings page
+https://github.com/decred/decrediton/pull/2441
+- minor fix?
+
+Remove hasTicketToRevoke selector 
+https://github.com/decred/decrediton/pull/2437
+
+Add new spawn
+https://github.com/decred/decrediton/pull/2436
+
+Add special no-sandbox scripts 
+https://github.com/decred/decrediton/pull/2435
+
+Disable sandbox 
+https://github.com/decred/decrediton/pull/2430
+
+
 [Politeia](https://github.com/decred/politeia):
 
 - [invalidate](https://github.com/decred/politeia/pull/1159) sessions on password change
