--- a/journal/202003.md
+++ b/journal/202003.md
@@ -51,9 +51,9 @@ In development:
 
 - Support for [cold staking](https://github.com/decred/decrediton/pull/2424).
 
- 
+
 Merged:
- 
+
 Responsive close button on settings page
 https://github.com/decred/decrediton/pull/2441
 - minor fix?
@@ -316,7 +316,7 @@ Selected articles:
 - https://beincrypto.com/could-proof-of-stake-cryptocurrencies-lead-to-more-centralization/
 - https://medium.com/@dlefebvr/crypto-risk-is-not-what-you-think-8a2662840b70
 - https://medium.com/@cato_io/threepillarstheory-cd6b57c5d88a {good?}
-- Brad Mill's opinion why Decred will fail https://medium.com/@bradmillscan/since-decred-is-competing-with-bitcoin-its-designed-to-fail-a13df8b5abbb (_missed in Jan_)
+- Brad Mill's opinion why Decred will fail https://medium.com/@bradmillscan/since-decred-is-competing-with-bitcoin-its-designed-to-fail-a13df8b5abbb (_missed in Jan_ RR: deliberately missed in Jan, it's junk)
 - Decred: How Does Your Development Continue During the Bear Market? by @adcade (in Spanish, [es.cointelegraph.com](https://es.cointelegraph.com/news/decred-how-does-your-development-continue-during-the-bear-market))
 
 The Brazil marketing and events [proposal](https://proposals.decred.org/proposals/bc20f986c3ea2fed2ea074c377a89f1a4b956ea0d527a8b6c099a5a8f175beb5) was covered in the media (in Portuguese):
@@ -356,7 +356,17 @@ Comm systems news:
 
 Selected Reddit posts:
 
-- https://www.reddit.com/r/CryptoTechnology/comments/fhulq3/decred_now_supports_the_most_privacy_preserving/
+- /u/oiezz has suggested using the monthly Journal posts as discussion spaces, and last month's [post](https://www.reddit.com/r/decred/comments/fgo0p4/decred_journal_february_2020/) has accumulated 18 comments.
+
+- @bee has [compiled](https://www.reddit.com/r/decred/comments/frqkt0/your_favorite_misconceptions_about_decred_in_one/) "Your favorite misconceptions about Decred in one place"
+
+- A [post](https://www.reddit.com/r/decred/comments/fhrsqn/austerity_mindset/fkd6nrn/) from /u/Corp-Por asking whether Decred should adopt an austerity mindset with Treasury funds had 22 comments and a score of 7. Most of the commenters were not as keen as the OP to make drastic changes, citing the Treasury's ample reserves and capacity to maintain funding at current rates for 5 years.
+
+- A [post](https://www.reddit.com/r/decred/comments/frb863/next_privacy_iteration_how_private_and_fungible/) asking about Decred's next privacy iteration had @jy-p respond to say that the approach is to pick the low-hanging fruit (Decrediton support, PQ-security), continue to increase mixing uptake, then re-visit questions about how to enhance privacy further.
+
+- @davecgh [responded](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/) to the unfortunate story of a Decred stakeholder who has lost access to their staked DCR because the VSP they were using went offline, their Decrediton machine was destroyed, and they had not saved the redeem script (see details [here](https://docs.decred.org/wallets/decrediton/using-decrediton/#backup-redeem-script)). @davecgh explained that the the redeem script is shared with the VSP as a multi-sig where either the user or VSP can redeem locked DCR and revoke tickets. As redeem scripts are re-used and revealed when the first ticket is redeemed, this stuck DCR scenario can only occur when the wallet of the user or VSP has never been online to redeem any of the tickets that used it. Once a single ticket has been redeemed by that wallet/VSP combination, the script is effectively stored in the blockchain.
+
+  
 
 Selected Twitter discussions:
 
