--- a/journal/202003.md
+++ b/journal/202003.md
@@ -318,6 +318,7 @@ Selected articles:
 - https://medium.com/@cato_io/threepillarstheory-cd6b57c5d88a {good?}
 - Brad Mill's opinion why Decred will fail https://medium.com/@bradmillscan/since-decred-is-competing-with-bitcoin-its-designed-to-fail-a13df8b5abbb (_missed in Jan_ RR: deliberately missed in Jan, it's junk)
 - Decred: How Does Your Development Continue During the Bear Market? by @adcade (in Spanish, [es.cointelegraph.com](https://es.cointelegraph.com/news/decred-how-does-your-development-continue-during-the-bear-market))
+- https://medium.com/@decentpartners/public-service-pandemics-and-crypto-networks-379dce1594d1
 
 The Brazil marketing and events [proposal](https://proposals.decred.org/proposals/bc20f986c3ea2fed2ea074c377a89f1a4b956ea0d527a8b6c099a5a8f175beb5) was covered in the media (in Portuguese):
 
@@ -370,7 +371,11 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-- https://twitter.com/swack0/status/1239674494526111747
+- @swack lost his hammer and tweeted this [thread](https://twitter.com/swack0/status/1239674494526111747) about Decred as the only non-Bitcoin cryptoasset that deserves consideration as SoV and fiat alternative, citing adaptability, sustainability, and lack of associated leveraged financial products.
+
+- DCP-0006 Social Media Governance, [announced](https://twitter.com/decredproject/status/1245399765489254400?s=20) Apr 1, is in doubt with an unexpectedly large proportion of respondents (66%) to the twitter poll voting to give twitter the greatest weighting - this raises serious questions about the sampling methodology.
+
+  
 
 ## Markets
 
@@ -390,22 +395,22 @@ exchanges decopupling https://twitter.com/HsakaTrades/status/1239227306863820801
 
 {governance, funding, chain forks, community forks}
 
-Steem takeover:
+Markets everywhere had a [very bad time](https://www.bloomberg.com/news/articles/2020-03-08/yen-slides-as-oil-price-war-adds-to-global-worries-markets-wrap) as the severity of the COVID-19 situation became clear and nations began to lock down. Cryptocurrency prices declined as much or more than most other assets, all Decred meetups and events are cancelled or moving online, and some contributors have more childcare to do than before, but those seem to the only changes that are directly relevant to Decred. Nevertheless, the situation obviously has an effect on all of us and the broader macroeconomic environment and outlook. Stay safe 
+
+It was a challenging month for DeFi, as a sharp drop in the price of ETH strained the stability of the DAI stablecoin. When ETH price moves too much some DAI loans will be liquidated in auctions if their holders do not add more ETH to reach the required collateralization, but on this occasion the price appears to have moved too quickly for the liquidation auctions to keep up. This [article](https://medium.com/@whiterabbit_hq/black-thursday-for-makerdao-8-32-million-was-liquidated-for-0-dai-36b83cac56b6) explains how $8.32 million worth of DAI was liquidated for $0, as unforeseen conditions in the auction process (including ETH chain congestion) resulted in 36% of all liquidation auctions going to the highest bidder at $0.00. "The greatest Vault has lost ~35 000 ETH whereas the most successful liquidator has had a profit of 30 000 ETH". This left the Maker Foundation and community in a difficult [position](https://www.coindesk.com/defi-leader-makerdao-weighs-emergency-shutdown-following-eth-price-drop), considering changing the rules on the fly or triggering an emergency shutdown. The Foundation [decided](https://www.coindesk.com/makerdao-debts-grow-as-defi-leader-moves-to-stabilize-protocol) not to use its power to intervene directly by triggering a shutdown, and moved to introduce proposals that modified risk parameters and set up an auction of newly printed MKR tokens to pay the protocol debt and "refund CDPs that lost funds".
+
+The Steem-Sun conflict began last month when the Steemit company (and its "ninja mined" Steem tokens) was acquired by Justin Sun - Steem (DPoS) witnesses adopted a hard fork to nullify those tokens, then Sun mobilized exchange support to oust the established witnesses and replace them with puppets that would not adopt the fork, preserving his STEEM tokens. In March the strategy of the Steem community changed, as an influential group decided to [migrate](https://www.coindesk.com/steem-will-hard-fork-in-just-hours-over-community-fears-of-justin-sun-power-grab) away from the Steem blockchain to a new one called Hive. Exchanges Binance and Huobi are said to be supportive of this move, in a remarkable turnaround from their actions last month where they voted with Sun. Prominent members of the Steem community thanked community members for withdrawing their STEEM from exchanges, to put pressure on exchanges to backtrack on supporting the Sun-powered witnesses. It seems the exchange operators were also misled about the significance of their votes in that context, believing that they were voting for a regular protocol upgrade.
+
+Hive is the same as Steem in most regards, with 1 STEEM being exchangeable for 1 HIVE - the main difference is that Sun's Steemit STEEM tokens will not be redeemable on the HIVE chain, effectively cutting them out of the ecosystem. When this [story](https://www.coindesk.com/splinter-cryptocurrency-hive-outperforms-justin-suns-steem-after-one-week-trading) was written the price of HIVE was almost double that of STEEM, but as of Apr 4 the two tokens are trading for similar prices. This case should be of interest to those who say coin voting is plutocratic, as it shows what can happen when whales try to use their coins to impose their will on an unwilling community.
+
+{RR: these are early in the story, so covered in what was reported last month}
 
 - https://nitter.snopyta.org/lukestokes/status/1234460578825015297
 - https://nitter.snopyta.org/VitalikButerin/status/1234522463129800709
 
-{DEX}
 
-MakerDAO bailout auction
 
-https://www.coindesk.com/defi-leader-makerdao-weighs-emergency-shutdown-following-eth-price-drop
-
-{relevant exchanges and websites}
-
-https://thenews.asia/amendment-to-special-reporting-act-passes-cryptocurrency-trading-now-legal-in-south-korea/
-
-https://news.bitcoin.com/bitcoin-legal-india-supreme-court-verdict-cryptocurrency/
+It has been a good month for people who like to buy, hold or sell cryptocurrency without being considered a criminal. The governments in [South Korea](https://thenews.asia/amendment-to-special-reporting-act-passes-cryptocurrency-trading-now-legal-in-south-korea/) and supreme court in [India](https://news.bitcoin.com/bitcoin-legal-india-supreme-court-verdict-cryptocurrency/) making moves to nullify previously imposed restrictions on cryptocurrency trading.
 
 Since Mar 18 Tether has issued over $400M USDT in batches of $60M and surpassed the [$6 billion](https://beincrypto.com/tether-usdt-quietly-surpasses-the-6-billion-mark/) mark. On Mar 25 USDT held on exchanges has set a new ATH of [$1.2 billion](https://twitter.com/glassnodealerts/status/1242849119456157699). { check numbers} The timing is interesting as it comes quickly after the market crash of Mar 12. Use USDT with caution, because even its co-founder believes ["it doesn't really matter"](https://beincrypto.com/tether-co-founder-it-doesnt-really-matter-if-usdt-backed-by-equal-amount-of-dollars/) if it's backed by an equal amount of dollars. { check the audio for exact quote }
 
@@ -419,7 +424,7 @@ President of one of the 12 Federal Reserve Banks openly admitted in an [intervie
 
 ECB [announced](https://www.ecb.europa.eu/press/pr/date/2020/html/ecb.pr200318_1~3949d6f266.en.html) a EUR 750 billion "Pandemic Emergency Purchase Programme" and [noted](https://twitter.com/Lagarde/status/1240414918966480896) "There are no limits to our commitment to the euro. We are determined to use the full potential of our tools, within our mandate". The bank is ready to further increase the size of asset purchase programmes and revise any self-imposed limits.
 
-markets panicking on cv https://twitter.com/business/status/1236919431156170752
+
 
 ## Happy Birthday DJ
 
