dev updates dcrwallet
@xaur, tons of PRs in dcrwallet this month, but wasn't sure how much of it was relevant. Seems like a lot of it is just minor bugs and cleanup, but hard to tell due to lack of commit messages, so just left a bunch of PRs in a 'Merged:' list.

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -22,6 +22,65 @@ https://bounty.decred.org/2020/03/status-update/ { to clarify, this was a bug in
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
+- Switch [notification server](https://github.com/decred/dcrwallet/pull/1698) to report the full block header of detached blocks instead of just the hash.
+https://github.com/decred/dcrwallet/pull/1698
+
+- Method [added](https://github.com/decred/dcrwallet/pull/1695) to Wallet which returns
+known address for each imported address of an account. 
+
+- dcrd modules [synced](https://github.com/decred/dcrwallet/pull/1691). 
+
+- [Record](https://github.com/decred/dcrwallet/pull/1688) cleartext p2sh redeem scripts in address manager.
+
+- [Removed](https://github.com/decred/dcrwallet/pull/1685) VSP-related config accessors from Wallet. These aren't used and especially in the case of TicketAddress (which
+returned a static address) are harmful to privacy. 
+
+- [Defined](https://github.com/decred/dcrwallet/pull/1683) Address and KnownAddress interfaces
+
+- [Added](https://github.com/decred/dcrwallet/pull/1681) new package-level type and variable to the wallet package that allows consumers to set their preferred PBKDF algorithm. This allows external tests to use a faster (albeit unsafe) algorithm to speed up wallet creation. It also adds a grpc endpoint to the WalletLoaderService so that remote users can also setup this parameter before creating a wallet.
+
+Merged:
+
+- wallet: add missing error check: https://github.com/decred/dcrwallet/pull/1708
+
+- Implement JSON-RPC fundrawtransaction: https://github.com/decred/dcrwallet/pull/1706
+
+- walletrpc doc fix+go.mod addition: https://github.com/decred/dcrwallet/pull/1704
+
+- Added go_package option: https://github.com/decred/dcrwallet/pull/1703
+
+- Fix ticketbuyer panic when PurchaseTickets errors: https://github.com/decred/dcrwallet/pull/1702
+
+- Remove more udb types from public wallet API: https://github.com/decred/dcrwallet/pull/1701
+
+- Update to bbolt v1.3.4 for armv7 build fix: https://github.com/decred/dcrwallet/pull/1700
+
+- Update bbolt to master for checkptr fix: https://github.com/decred/dcrwallet/pull/1699
+
+- Switch DetachedBlocks ntfn to report header: https://github.com/decred/dcrwallet/pull/1698
+
+- Remove everything flagged as deprecated #: https://github.com/decred/dcrwallet/pull/1697
+
+- Move udb.ManagedAddress wrapping to one func: https://github.com/decred/dcrwallet/pull/1696
+
+- Fix type confusion: https://github.com/decred/dcrwallet/pull/1694
+
+- Avoid duplicate JSON-RPC script imports: https://github.com/decred/dcrwallet/pull/1689
+
+- Fix data race: https://github.com/decred/dcrwallet/pull/1684
+
+- Remove deprecated ticket purchasing methods: https://github.com/decred/dcrwallet/pull/1679
+
+- Use better names for accessing BIP0044 xpubs/xpriv: https://github.com/decred/dcrwallet/pull/1678
+
+- Avoid spurious error logs caused by cancelling ticket purchasing: https://github.com/decred/dcrwallet/pull/1677
+
+- Remove or unexport a few unused APIs: https://github.com/decred/dcrwallet/pull/1676
+
+- Remove DisableLog functions: https://github.com/decred/dcrwallet/pull/1675
+
+- Unify files dealing with TLS signature schemes: https://github.com/decred/dcrwallet/pull/1674
+
 [Decrediton](https://github.com/decred/decrediton): {}
 
 - Refactor to start decrediton using a [state machine](https://github.com/decred/decrediton/pull/2425). This will be useful to code maintenance, readability, treating errors and add new ways to start decrediton.
@@ -54,21 +113,15 @@ In development:
 
 Merged:
 
-Responsive close button on settings page
-https://github.com/decred/decrediton/pull/2441
-- minor fix?
+- Responsive close button on settings page: https://github.com/decred/decrediton/pull/2441
 
-Remove hasTicketToRevoke selector 
-https://github.com/decred/decrediton/pull/2437
+- Remove hasTicketToRevoke selector: https://github.com/decred/decrediton/pull/2437
 
-Add new spawn
-https://github.com/decred/decrediton/pull/2436
+- Add new spawn: https://github.com/decred/decrediton/pull/2436
 
-Add special no-sandbox scripts 
-https://github.com/decred/decrediton/pull/2435
+- Add special no-sandbox scripts: https://github.com/decred/decrediton/pull/2435
 
-Disable sandbox 
-https://github.com/decred/decrediton/pull/2430
+- Disable sandbox: https://github.com/decred/decrediton/pull/2430
 
 
 [Politeia](https://github.com/decred/politeia):
