Dev dcrdex, drop cspp

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -256,12 +256,19 @@ In development:
 
 * Add [implementation](https://github.com/decred/dcrlnd/pull/92) for chainntnfs package that use the wallet as source of chain events. This allows to further decouple dcrlnd from an underlying dcrd, which is a requirement for having a dcrlnd instance running in SPV mode.
 
+[dcrdex](https://github.com/decred/dcrdex): New completed work:
 
-[cspp](https://github.com/decred/cspp): {}
+- [RPC client](https://github.com/decred/dcrdex/pull/181) for DEX client's RPC server (_ouch_)
+- ability to [place orders](https://github.com/decred/dcrdex/pull/195) through the GUI
+- client account [backup and restore](https://github.com/decred/dcrdex/pull/210) { how is this different from 183 reported in Feb? }
+- { handling of `epoch_order` (188) and `match_proof` (189) - is it notable? if yes, how to present? }
+- added [match negotiation](https://github.com/decred/dcrdex/pull/213) { is it client, server or both? anything to add to better explain this change? }
+- added [cancellation ratio](https://github.com/decred/dcrdex/pull/206) computation to track if clients abuse order cancellation
+- codebase refactoring and cleanup
 
-[dcrdex](https://github.com/decred/dcrdex): {}
+A total of 19 pull requests merged from 6 contributors adding 11K and deleting 3K lines of code (commit summary [here](https://github.com/decred/dcrdex/compare/94310f66c06fdf5ca31eeb80c9f6af7aecf4c31d...d3bd07f822200041092bdc85f5c1b752b3c9ee24)).
 
-- first testnet swap coordinated https://twitter.com/chappjc/status/1245075450625511425
+Congratulations to dcrdex team for [coordinating](https://twitter.com/chappjc/status/1245075450625511425) first order-driven atomic swap on testnet!
 
 [dcrandroid](https://github.com/decred/dcrandroid): {}
 
