--- a/journal/202003.md
+++ b/journal/202003.md
@@ -309,7 +309,7 @@ Merged:
 
 - multi: cleanups, improvements and fixes: https://github.com/raedahgroup/dcrios/pull/598
 
-[dcrdata](https://github.com/decred/dcrdata): {}
+[dcrdata](https://github.com/decred/dcrdata): Small tweaks and bug fixes.
 
 [tinydecred](https://github.com/decred/tinydecred): {}
 
