--- a/journal/202003.md
+++ b/journal/202003.md
@@ -27,33 +27,14 @@ Highlights for March:
 
 A vulnerability was [disclosed](https://bounty.decred.org/2020/03/status-update/) that allowed a potential multi-day memory exhaustion attack that could lead to a node crash in dcrd 1.4.0. On Mar 13 the network forked to new consensus rules implemented in dcrd 1.5.0 and higher which contain a fix. { to clarify, this was a bug in implementation but not in consensus rules, right? }
 
-[dcrwallet](https://github.com/decred/dcrwallet): {}
+[dcrwallet](https://github.com/decred/dcrwallet):
 
-- Switch [notification server](https://github.com/decred/dcrwallet/pull/1698) to report the full block header of detached blocks instead of just the hash.
-
-- Method [added](https://github.com/decred/dcrwallet/pull/1695) to Wallet which returns
-known address for each imported address of an account. 
-
-- dcrd modules [synced](https://github.com/decred/dcrwallet/pull/1691). 
-
-- [Record](https://github.com/decred/dcrwallet/pull/1688) cleartext p2sh redeem scripts in address manager.
-
-- [Removed](https://github.com/decred/dcrwallet/pull/1685) VSP-related config accessors from Wallet. These aren't used and especially in the case of TicketAddress (which
-returned a static address) are harmful to privacy. 
-
-- [Defined](https://github.com/decred/dcrwallet/pull/1683) Address and KnownAddress interfaces
-
-- [Added](https://github.com/decred/dcrwallet/pull/1681) new package-level type and variable to the wallet package that allows consumers to set their preferred PBKDF algorithm. This allows external tests to use a faster (albeit unsafe) algorithm to speed up wallet creation. It also adds a grpc endpoint to the WalletLoaderService so that remote users can also setup this parameter before creating a wallet.
-
-Merged:
-
-- Implement JSON-RPC fundrawtransaction: https://github.com/decred/dcrwallet/pull/1706
-
-- Switch DetachedBlocks ntfn to report header: https://github.com/decred/dcrwallet/pull/1698
-
-- Remove or unexport a few unused APIs: https://github.com/decred/dcrwallet/pull/1676
-
-- Unify files dealing with TLS signature schemes: https://github.com/decred/dcrwallet/pull/1674
+- `fundrawtransaction` command [implemented](https://github.com/decred/dcrwallet/pull/1706) that adds unsigned inputs and change output to a raw transaction
+- wallet operations [switched](https://github.com/decred/dcrwallet/pull/1648) to use version 2 commited filters { didn't v1.5 already ship with v2 filter support? does it mean v2 filters will only be used in release v1.6 }
+- `getaddressesbyaccount` command [fixed](https://github.com/decred/dcrwallet/pull/1695) to also return imported addresses from the `imported` account
+- unencrypted P2SH redeem scripts are [moved](https://github.com/decred/dcrwallet/pull/1688) to address manager storage. { why? explain or drop }
+- internal improvements to efficiency and semantics
+- cleanup to remove deprecated and unused code
 
 [Decrediton](https://github.com/decred/decrediton): {}
 
