--- a/journal/202003.md
+++ b/journal/202003.md
@@ -38,13 +38,10 @@ A vulnerability was [disclosed](https://bounty.decred.org/2020/03/status-update/
 
 [Decrediton](https://github.com/decred/decrediton):
 
-- Refactor to start decrediton using a [state machine](https://github.com/decred/decrediton/pull/2425). This will be useful to code maintenance, readability, treating errors and add new ways to start decrediton.
-- Single proposal view made [responsive](https://github.com/decred/decrediton/pull/2444). 
-- Better info on state of [agendas](https://github.com/decred/decrediton/pull/2442).
-- Ability to watch only [wallets import scripts](https://github.com/decred/decrediton/pull/2423).
-- [Added](https://github.com/decred/decrediton/pull/2416) tx's addresses to overview and transactions view 
-- Support for [cold staking](https://github.com/decred/decrediton/pull/2424).
-- UI tweaks
+- support for [cold staking](https://github.com/decred/decrediton/pull/2424) { is it full support tangible by the user or one step to it? if the latter, clarify what exactly is added. and what is the ticket signing flow? }
+- support for [importing scripts](https://github.com/decred/decrediton/pull/2423) in watch-only wallets { is this correct wording? }
+- retrieve passed [agendas](https://github.com/decred/decrediton/pull/2442) from dcrdata
+- responsive [proposal view](https://github.com/decred/decrediton/pull/2444), [address](https://github.com/decred/decrediton/pull/2416) display on overview and transaction views, and other UI tweaks
 
 In development:
 
