--- a/journal/202003.md
+++ b/journal/202003.md
@@ -41,6 +41,7 @@ A vulnerability was [disclosed](https://bounty.decred.org/2020/03/status-update/
 - support for [cold staking](https://github.com/decred/decrediton/pull/2424) { is it full support tangible by the user or one step to it? if the latter, clarify what exactly is added. and what is the ticket signing flow? }
 - support for [importing scripts](https://github.com/decred/decrediton/pull/2423) in watch-only wallets { is this correct wording? }
 - retrieve passed [agendas](https://github.com/decred/decrediton/pull/2442) from dcrdata
+- check for [new proposals](https://github.com/decred/decrediton/pull/2420)
 - responsive [proposal view](https://github.com/decred/decrediton/pull/2444), [address](https://github.com/decred/decrediton/pull/2416) display on overview and transaction views, and other UI tweaks
 
 In development:
