--- a/journal/202003.md
+++ b/journal/202003.md
@@ -67,26 +67,9 @@ Up next:
   - { how to interpret "starting the tlog implementation" if we've reported a bunch of tlog work already? }
   - { is there a spec describing how tlog backend will work? }
 
-[dcrstakepool](https://github.com/decred/dcrstakepool): {}
+[dcrstakepool](https://github.com/decred/dcrstakepool):
 
-- New scheme for [error handling](https://github.com/decred/dcrstakepool/pull/610).
- 
-
-Merged:
-
-- Add contexts: https://github.com/decred/dcrstakepool/pull/614
-
-- multi: sync deps, drop x/net/context: https://github.com/decred/dcrstakepool/pull/612
-
-- stakepool: bump minimum dcrwallet api requirement: https://github.com/decred/dcrstakepool/pull/609
-
-- dcrstakepool: exit early on configuration error.: https://github.com/decred/dcrstakepool/pull/608
-
-- Open external links in a new tab: https://github.com/decred/dcrstakepool/pull/603
-
-- controllers/main: Add getAgendas test: https://github.com/decred/dcrstakepool/pull/599
-
-- controllers/main: Add NewMainControllerTest: https://github.com/decred/dcrstakepool/pull/598
+- code maintenance to improve error handling and cancellation, add documentation, upgrade dependencies and add tests
 
 [dcrpool](https://github.com/decred/dcrpool):
 
