--- a/journal/202003.md
+++ b/journal/202003.md
@@ -80,21 +80,15 @@ Up next:
 - increased test coverage
 - smaller improvements to UX, config and a few bug fixes
 
-[dcrlnd](https://github.com/decred/dcrlnd): {}
+[dcrlnd](https://github.com/decred/dcrlnd):
 
-* [improvements](https://github.com/decred/dcrlnd/pull/84) to build elements.
-
-* make p2pkh [deafult](https://github.com/decred/dcrlnd/pull/86) on dcrlncli for newaddress address type.
-
-* go version [bumped](https://github.com/decred/dcrlnd/pull/85) to 1.14.
+- build system [improvements](https://github.com/decred/dcrlnd/pull/84)
 
 In development:
 
-* Enabling SPV mode for [remote wallets](https://github.com/decred/dcrlnd/pull/95)
-
-* Switch to use recently introduced wallet-backend [drivers](https://github.com/decred/dcrlnd/pull/94) for chain IO operations. 
-
-* Add [implementation](https://github.com/decred/dcrlnd/pull/92) for chainntnfs package that use the wallet as source of chain events. This allows to further decouple dcrlnd from an underlying dcrd, which is a requirement for having a dcrlnd instance running in SPV mode.
+- Enabling SPV mode for [remote wallets](https://github.com/decred/dcrlnd/pull/95)
+- Switch to use recently introduced wallet-backend [drivers](https://github.com/decred/dcrlnd/pull/94) for chain IO operations. 
+- Add [implementation](https://github.com/decred/dcrlnd/pull/92) for chainntnfs package that use the wallet as source of chain events. This allows to further decouple dcrlnd from an underlying dcrd, which is a requirement for having a dcrlnd instance running in SPV mode.
 
 [dcrdex](https://github.com/decred/dcrdex): New completed work:
 
