--- a/journal/202003.md
+++ b/journal/202003.md
@@ -130,15 +130,12 @@ Congratulations to dcrdex team for [coordinating](https://twitter.com/chappjc/st
 
 A total of 56 pull requests merged from 3 contributors adding 11K and deleting 6K lines of code (commit summary [here](https://github.com/decred/tinydecred/compare/fa081e7f17d303f0eea31e9f07499db4e0acc53a...e1ef1ff72cb924d27098f9df151f6805d5db3e90)).
 
-[docs](https://github.com/decred/dcrdocs): {}
+[docs](https://github.com/decred/dcrdocs):
 
-* dcrlnd docs [updated](https://github.com/decred/dcrdocs/pull/1083) for latest release (0.2.1). 
-
-* Guide on how to join Matrix [added](https://github.com/decred/dcrdocs/pull/1081). 
-
-* Inflation page renamed to “Issuance” page, to clear up confusion. 
-
-* Documentation for Tor hidden service for CoinShuffle++ (CSPP) [added](https://github.com/decred/dcrdocs/pull/1073).
+- [dcrlnd](https://docs.decred.org/lightning-network/overview/) docs [updated](https://github.com/decred/dcrdocs/pull/1083) for latest release 0.2.1, commands grouped into categories
+- [guide](https://docs.decred.org/getting-started/joining-matrix-channels/) on how to join Matrix [added](https://github.com/decred/dcrdocs/pull/1081)
+- Inflation page [renamed](https://github.com/decred/dcrdocs/issues/1074) to [Issuance](https://docs.decred.org/advanced/issuance/) page to remove ambiguity
+- [documented](https://github.com/decred/dcrdocs/pull/1073) accessing CoinShuffle++ server as a [Tor hidden service](https://docs.decred.org/privacy/cspp/how-to-cspp/#tor-hidden-service)
 
 [decred.org](https://github.com/decred/dcrweb): {}
 
