--- a/journal/202003.md
+++ b/journal/202003.md
@@ -137,9 +137,12 @@ A total of 56 pull requests merged from 3 contributors adding 11K and deleting 6
 - Inflation page [renamed](https://github.com/decred/dcrdocs/issues/1074) to [Issuance](https://docs.decred.org/advanced/issuance/) page to remove ambiguity
 - [documented](https://github.com/decred/dcrdocs/pull/1073) accessing CoinShuffle++ server as a [Tor hidden service](https://docs.decred.org/privacy/cspp/how-to-cspp/#tor-hidden-service)
 
-[decred.org](https://github.com/decred/dcrweb): {}
+[decred.org](https://github.com/decred/dcrweb):
 
-Large cleanup pass fixing minor issues with the new website, a number of [small improvements](https://github.com/decred/dcrweb/pull/855) and updated VSP [copy](https://github.com/decred/dcrweb/pull/853).
+- large cleanup pass fixing minor issues with the new website
+- updated VSP [copy](https://github.com/decred/dcrweb/pull/853)
+- Recruiting page removed and decred.org/recruiting now redirects to the [Contributing](https://docs.decred.org/contributing/overview/) page
+- Roadmap page [removed](https://github.com/decred/dcrweb/pull/857)
 
 Other:
 
