--- a/journal/202003.md
+++ b/journal/202003.md
@@ -14,6 +14,8 @@ Highlights for March:
 
 ## Development
 
+Unless otherwise noted, the work reported here has the status "merged to master", meaning that it was completed, reviewed and integrated into the source code that anyone can build, but is not yet available in release binaries.
+
 [dcrd](https://github.com/decred/dcrd): Merged work:
 
 - ECDSA signatures [decoupled](https://github.com/decred/dcrd/pull/2139) from secp256k1 package. This makes clear that ECDSA is only one possible digital signature algorithm, and to enable Schnorr signatures to be made first class citizens of the codebase. 
@@ -26,6 +28,8 @@ Highlights for March:
 - removed unused code
 
 A vulnerability was [disclosed](https://bounty.decred.org/2020/03/status-update/) that allowed a potential multi-day memory exhaustion attack that could lead to a node crash in dcrd 1.4.0. On Mar 13 the network forked to new consensus rules implemented in dcrd 1.5.0 and higher which contain a fix. { to clarify, this was a bug in implementation but not in consensus rules, right? }
+
+Decred has less than 16% of equal code with btcd according to an [analysis](https://coincode.sh/c/dcr/) by CoinCode.sh.
 
 [dcrwallet](https://github.com/decred/dcrwallet):
 
@@ -146,8 +150,8 @@ A total of 56 pull requests merged from 3 contributors adding 11K and deleting 6
 
 Other:
 
-- { less than 16% overlap with btcd? any more data on this? } https://www.reddit.com/r/decred/comments/ffsi8y/decred_code_analysis_coincodesh/fk358am/
-- DigiSign Oracle is a free open source web app that helps end users verify digital signatures. It was created to help Decred users verify package signatures without having to use complicated command lines. They can access https://stakey.club/digisign-oracle/ or download the source code from  https://github.com/mmartins000/digisign-oracle to their computer and open with a web browser.
+- Most projects upgraded to build with Go 1.14 and dropped support of Go 1.12.
+- @mm released DigiSign Oracle, a free and open source web app that helps end users verify digital signatures. It was created to help Decred users verify package signatures without having to use complicated command line programs. You can access it at [stakey.club](https://stakey.club/digisign-oracle/) or download the [source code](https://github.com/mmartins000/digisign-oracle) to your computer and open with a web browser.
 
 Dev activity stats for March: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
 
